--- a/index.html
+++ b/index.html
@@ -9,15 +9,41 @@
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
   <style>
-    body{margin:0;font-family:Arial;background:#000080;min-height:100vh;display:flex;justify-content:center;align-items:center}
-    .card{background:#fff;color:#000080;padding:25px;border-radius:12px;width:420px}
-    h3{text-align:center}
-    label{font-size:14px;margin-top:10px;display:block}
-    input,select{width:100%;padding:8px;margin-top:6px}
-    button{width:100%;padding:10px;margin-top:12px;background:#000080;color:#fff;border:none}
-    .secondary{background:#f2f2f2;color:#000080}
-    .admin{background:#ffb700;color:#000}
-    .msg{text-align:center;margin-top:10px}
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #000080;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .card {
+      background: white;
+      color: #000080;
+      padding: 25px;
+      border-radius: 12px;
+      width: 420px;
+    }
+    h3 { text-align: center; }
+    label { font-size: 14px; display: block; margin-top: 10px; }
+    input, select {
+      width: 100%;
+      padding: 8px;
+      margin-top: 6px;
+    }
+    button {
+      width: 100%;
+      padding: 10px;
+      margin-top: 12px;
+      background: #000080;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    .msg { text-align: center; font-size: 14px; margin-top: 10px; }
+    .err { color: red; }
+    .success { color: green; }
   </style>
 </head>
 
@@ -31,63 +57,181 @@
   <input id="password" type="password" />
   <button onclick="login()">Login</button>
   <button onclick="signup()">Sign Up</button>
-  <p id="authMsg" class="msg"></p>
+  <p id="authMsg" class="msg err"></p>
+</div>
+
+<div class="card" id="profile" style="display:none;">
+  <h3>Profile Setup</h3>
+  <label>Full Name</label>
+  <input id="displayName" />
+  <label>Devotee ID</label>
+  <input id="devoteeId" />
+  <button onclick="saveProfile()">Continue</button>
+  <p id="profileMsg" class="msg err"></p>
+</div>
+
+<div class="card" id="category" style="display:none;">
+  <h3>Select Chanting Category</h3>
+  <select id="categorySelect">
+    <option value="">-- Select --</option>
+    <option value="0-4">0 – 4 rounds</option>
+    <option value="5-9">5 – 9 rounds</option>
+    <option value="10-16">10 – 16 rounds</option>
+  </select>
+  <button onclick="saveCategory()">Continue</button>
+  <p id="catMsg" class="msg err"></p>
 </div>
 
 <div class="card" id="sadhana" style="display:none;">
-  <h3 id="welcome"></h3>
-  <button class="admin" id="adminBtn" onclick="openAdmin()" style="display:none;">Admin Dashboard</button>
-  <button onclick="logout()">Logout</button>
-</div>
+  <h3>Daily Sadhana</h3>
 
-<div class="card" id="admin" style="display:none;">
-  <h3>Admin Dashboard</h3>
-  <div id="userList"></div>
-  <button class="secondary" onclick="back()">Back</button>
+  <label>Date</label>
+  <select id="dateSelect"></select>
+
+  <label>Sleep Time</label>
+  <input type="time" id="sleepTime" />
+
+  <label>Wake-up Time</label>
+  <input type="time" id="wakeTime" />
+
+  <label>Chanting Completion Time</label>
+  <input type="time" id="chantingTime" />
+
+  <label>Reading (minutes)</label>
+  <input type="number" id="reading" />
+
+  <label>Hearing (minutes)</label>
+  <input type="number" id="hearing" />
+
+  <label>Day Sleep (minutes)</label>
+  <input type="number" id="daySleep" />
+
+  <button onclick="submitSadhana()">Submit Sadhana</button>
+  <button onclick="logout()">Logout</button>
+
+  <p id="successMsg" class="msg success"></p>
 </div>
 
 <script>
   const firebaseConfig = {
-    apiKey:"AIzaSyDbRy8ZMJAWeTyZVnTphwRIei6jAckagjA",
-    authDomain:"sadhana-tracker-b65ff.firebaseapp.com",
-    projectId:"sadhana-tracker-b65ff",
-    appId:"1:926961218888:web:db8f12ef8256d13f036f7d"
+    apiKey: "AIzaSyDbRy8ZMJAWeTyZVnTphwRIei6jAckagjA",
+    authDomain: "sadhana-tracker-b65ff.firebaseapp.com",
+    projectId: "sadhana-tracker-b65ff",
+    appId: "1:926961218888:web:db8f12ef8256d13f036f7d"
   };
 
   firebase.initializeApp(firebaseConfig);
-  const auth=firebase.auth(), db=firebase.firestore();
-  const ADMIN_EMAIL="riyagupta9872@gmail.com";
+  const auth = firebase.auth();
+  const db = firebase.firestore();
 
-  const show=id=>["loading","auth","sadhana","admin"].forEach(s=>document.getElementById(s).style.display=s===id?"block":"none");
+  const screens = ["loading","auth","profile","category","sadhana"];
+  const show = id => screens.forEach(s =>
+    document.getElementById(s).style.display = s === id ? "block" : "none"
+  );
 
-  auth.onAuthStateChanged(async u=>{
-    if(!u){show("auth");return;}
-    const ref=db.collection("users").doc(u.uid);
-    const snap=await ref.get();
-    let role=snap.exists?snap.data().role:"user";
-    if(u.email===ADMIN_EMAIL && role!=="admin"){
-      await ref.set({role:"admin"}, {merge:true});
-      role="admin";
+  let uid = null;
+
+  auth.onAuthStateChanged(async user => {
+    if (!user) { show("auth"); return; }
+    uid = user.uid;
+    setupDates();
+
+    const ref = db.collection("users").doc(uid);
+    const snap = await ref.get();
+    const data = snap.exists ? snap.data() : {};
+
+    if (!data.displayName || !data.devoteeId) {
+      show("profile");
+    } else if (!data.chantingCategory) {
+      show("category");
+    } else {
+      show("sadhana");
+      preloadSadhana();
     }
-    welcome.innerText="Welcome";
-    if(role==="admin") adminBtn.style.display="block";
-    show("sadhana");
   });
 
-  function login(){auth.signInWithEmailAndPassword(email.value,password.value).catch(e=>authMsg.innerText=e.message)}
-  function signup(){auth.createUserWithEmailAndPassword(email.value,password.value).catch(e=>authMsg.innerText=e.message)}
-  function logout(){auth.signOut()}
-  function back(){show("sadhana")}
-
-  async function openAdmin(){
-    show("admin");
-    const list=await db.collection("users").get();
-    userList.innerHTML="";
-    list.forEach(d=>{
-      const u=d.data();
-      userList.innerHTML+=`<p><b>${u.displayName||"No Name"}</b> (${u.devoteeId||"-"}) - ${u.chantingCategory||""}</p>`;
-    });
+  function login() {
+    auth.signInWithEmailAndPassword(email.value, password.value)
+      .catch(e => authMsg.innerText = e.message);
   }
+  function signup() {
+    auth.createUserWithEmailAndPassword(email.value, password.value)
+      .catch(e => authMsg.innerText = e.message);
+  }
+
+  async function saveProfile() {
+    if (!displayName.value || !devoteeId.value) {
+      profileMsg.innerText = "All fields required";
+      return;
+    }
+    await db.collection("users").doc(uid).set({
+      displayName: displayName.value,
+      devoteeId: devoteeId.value,
+      updatedAt: firebase.firestore.FieldValue.serverTimestamp()
+    }, { merge: true });
+    show("category");
+  }
+
+  async function saveCategory() {
+    if (!categorySelect.value) {
+      catMsg.innerText = "Select category";
+      return;
+    }
+    await db.collection("users").doc(uid).set({
+      chantingCategory: categorySelect.value,
+      updatedAt: firebase.firestore.FieldValue.serverTimestamp()
+    }, { merge: true });
+    show("sadhana");
+  }
+
+  function setupDates() {
+    dateSelect.innerHTML = "";
+    const t = new Date();
+    for (let i = 0; i <= 2; i++) {
+      const d = new Date(t);
+      d.setDate(t.getDate() - i);
+      const v = d.toISOString().slice(0,10);
+      const o = document.createElement("option");
+      o.value = v; o.text = v;
+      dateSelect.appendChild(o);
+    }
+  }
+
+  async function preloadSadhana() {
+    const date = dateSelect.value;
+    const ref = db.collection("users").doc(uid)
+      .collection("sadhana").doc(date);
+    const snap = await ref.get();
+    if (!snap.exists) return;
+    const d = snap.data();
+    sleepTime.value = d.sleepTime || "";
+    wakeTime.value = d.wakeTime || "";
+    chantingTime.value = d.chantingTime || "";
+    reading.value = d.reading || "";
+    hearing.value = d.hearing || "";
+    daySleep.value = d.daySleep || "";
+  }
+
+  dateSelect.addEventListener("change", preloadSadhana);
+
+  async function submitSadhana() {
+    const date = dateSelect.value;
+    await db.collection("users").doc(uid)
+      .collection("sadhana").doc(date).set({
+        date,
+        sleepTime: sleepTime.value,
+        wakeTime: wakeTime.value,
+        chantingTime: chantingTime.value,
+        reading: reading.value,
+        hearing: hearing.value,
+        daySleep: daySleep.value,
+        updatedAt: firebase.firestore.FieldValue.serverTimestamp(),
+        createdAt: firebase.firestore.FieldValue.serverTimestamp()
+      }, { merge: true });
+    successMsg.innerText = "Sadhana submitted 🙏";
+  }
+
+  function logout() { auth.signOut(); }
 </script>
 
 </body>
