--- a/index.html
+++ b/index.html
@@ -24,248 +24,241 @@
       padding: 20px;
       border-radius: 12px;
       width: 95%;
-      max-width: 1000px;
+      max-width: 900px;
     }
-    h3, h4 { margin-top: 0; text-align:center }
-    .tabs { display:flex; margin-bottom:15px }
+    h3 { text-align: center; margin-top: 0; }
+    .tabs {
+      display: flex;
+      margin-bottom: 15px;
+    }
     .tab {
-      flex:1; text-align:center; padding:10px;
-      cursor:pointer; border-bottom:3px solid transparent;
+      flex: 1;
+      text-align: center;
+      padding: 10px;
+      cursor: pointer;
+      border-bottom: 3px solid transparent;
     }
     .tab.active {
-      border-bottom:3px solid #000080;
-      font-weight:bold;
+      border-bottom: 3px solid #000080;
+      font-weight: bold;
     }
-    table {
-      width:100%; border-collapse:collapse;
-      font-size:13px; margin-top:10px;
-    }
-    th, td {
-      border:1px solid #ddd; padding:6px; text-align:center;
-    }
-    th { background:#f0f0f0 }
-    .neg { color:#b00000 }
-    .danger { color:#b00000; font-weight:bold }
-    .week-box {
-      border:1px solid #ccc;
-      padding:8px; margin-top:8px;
-      cursor:pointer; border-radius:6px;
+    label { font-size: 13px; display: block; margin-top: 8px; }
+    input, select {
+      width: 100%;
+      padding: 6px;
+      margin-top: 4px;
     }
     button {
-      padding:6px 10px; background:#000080;
-      color:white; border:none; cursor:pointer;
-      margin-top:8px;
+      padding: 8px 12px;
+      margin-top: 10px;
+      background: #000080;
+      color: white;
+      border: none;
+      cursor: pointer;
     }
-    select, input {
-      width:100%; padding:6px; margin-top:4px;
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      font-size: 13px;
+      margin-top: 10px;
+    }
+    th, td {
+      border: 1px solid #ddd;
+      padding: 6px;
+      text-align: center;
+    }
+    th { background: #f0f0f0; }
+    .neg { color: #b00000; }
+    .week-header {
+      background: #f7f7f7;
+      padding: 8px;
+      margin-top: 10px;
+      cursor: pointer;
+      border-radius: 6px;
+    }
+    .danger {
+      color: #b00000;
+      font-weight: bold;
     }
   </style>
 </head>
 
 <body>
+
 <div class="card">
   <h3>Sadhana Tracker</h3>
 
-  <div class="tabs" id="mainTabs"></div>
+  <div class="tabs">
+    <div class="tab active" id="tabSadhana" onclick="showTab('sadhana')">Sadhana</div>
+    <div class="tab" id="tabScores" onclick="showTab('scores')">Scores</div>
+  </div>
 
-  <!-- SADHANA -->
+  <!-- SADHANA TAB -->
   <div id="sadhanaTab">
     <label>Date</label>
     <select id="dateSelect"></select>
 
-    <label>Sleep Time</label><input type="time" id="sleepTime">
-    <label>Wake Time</label><input type="time" id="wakeTime">
-    <label>Chanting Time</label><input type="time" id="chantingTime">
-    <label>Reading (min)</label><input type="number" id="reading">
-    <label>Hearing (min)</label><input type="number" id="hearing">
-    <label>Day Sleep (min)</label><input type="number" id="daySleep">
+    <label>Sleep Time</label>
+    <input type="time" id="sleepTime">
 
-    <button onclick="submitSadhana()">Submit</button>
+    <label>Wake-up Time</label>
+    <input type="time" id="wakeTime">
+
+    <label>Chanting Completion</label>
+    <input type="time" id="chantingTime">
+
+    <label>Reading (minutes)</label>
+    <input type="number" id="reading">
+
+    <label>Hearing (minutes)</label>
+    <input type="number" id="hearing">
+
+    <label>Day Sleep (minutes)</label>
+    <input type="number" id="daySleep">
+
+    <button onclick="submitSadhana()">Submit Sadhana</button>
     <button onclick="logout()">Logout</button>
   </div>
 
-  <!-- SCORES -->
+  <!-- SCORES TAB -->
   <div id="scoresTab" style="display:none">
-    <h4>Monthly Overview</h4>
-    <div id="monthlySummary"></div>
-
-    <h4 style="margin-top:15px">Current Week</h4>
+    <h4>Current Week</h4>
     <div id="currentWeek"></div>
 
-    <h4 style="margin-top:15px">Previous Weeks</h4>
+    <h4 style="margin-top:20px">Previous Weeks</h4>
     <div id="previousWeeks"></div>
-  </div>
-
-  <!-- ADMIN -->
-  <div id="adminTab" style="display:none">
-    <h4>Users</h4>
-    <select id="userSelect" onchange="loadUserScores()"></select>
-
-    <h4 style="margin-top:15px">User Scores</h4>
-    <div id="adminUserScores"></div>
-
-    <h4 style="margin-top:15px">Comparative View</h4>
-    <div id="compareView"></div>
   </div>
 </div>
 
 <script>
-const firebaseConfig = {
-  apiKey: "AIzaSyDbRy8ZMJAWeTyZVnTphwRIei6jAckagjA",
-  authDomain: "sadhana-tracker-b65ff.firebaseapp.com",
-  projectId: "sadhana-tracker-b65ff",
-  appId: "1:926961218888:web:db8f12ef8256d13f036f7d"
-};
-firebase.initializeApp(firebaseConfig);
-const auth = firebase.auth();
-const db = firebase.firestore();
+  const firebaseConfig = {
+    apiKey: "AIzaSyDbRy8ZMJAWeTyZVnTphwRIei6jAckagjA",
+    authDomain: "sadhana-tracker-b65ff.firebaseapp.com",
+    projectId: "sadhana-tracker-b65ff",
+    appId: "1:926961218888:web:db8f12ef8256d13f036f7d"
+  };
 
-let uid = null;
-let isAdmin = false;
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+  const db = firebase.firestore();
+  let uid = null;
 
-auth.onAuthStateChanged(async user => {
-  if (!user) return;
-  uid = user.uid;
-  setupDates();
-
-  const userDoc = await db.collection("users").doc(uid).get();
-  isAdmin = userDoc.exists && userDoc.data().isAdmin === true;
-
-  renderTabs();
-});
-
-function renderTabs() {
-  const tabs = document.getElementById("mainTabs");
-  tabs.innerHTML = `
-    <div class="tab active" onclick="showTab('sadhana')">Sadhana</div>
-    <div class="tab" onclick="showTab('scores')">Scores</div>
-    ${isAdmin ? `<div class="tab" onclick="showTab('admin')">Admin</div>` : ``}
-  `;
-}
-
-function showTab(tab) {
-  ["sadhana","scores","admin"].forEach(t=>{
-    document.getElementById(t+"Tab").style.display = (t===tab?"block":"none");
-  });
-  [...document.querySelectorAll(".tab")].forEach(t=>t.classList.remove("active"));
-  event.target.classList.add("active");
-  if (tab==="scores") loadScores(uid);
-  if (tab==="admin") loadAdmin();
-}
-
-function setupDates() {
-  dateSelect.innerHTML="";
-  const t=new Date();
-  for(let i=0;i<=2;i++){
-    const d=new Date(t); d.setDate(t.getDate()-i);
-    const v=d.toISOString().slice(0,10);
-    dateSelect.innerHTML+=`<option>${v}</option>`;
+  function showTab(tab) {
+    document.getElementById("sadhanaTab").style.display = tab === "sadhana" ? "block" : "none";
+    document.getElementById("scoresTab").style.display = tab === "scores" ? "block" : "none";
+    document.getElementById("tabSadhana").classList.toggle("active", tab === "sadhana");
+    document.getElementById("tabScores").classList.toggle("active", tab === "scores");
+    if (tab === "scores") loadScores();
   }
-}
 
-async function submitSadhana(){
-  await db.collection("users").doc(uid).collection("sadhana")
-    .doc(dateSelect.value).set({
-      sleepTime:sleepTime.value,
-      wakeTime:wakeTime.value,
-      chantingTime:chantingTime.value,
-      reading:reading.value,
-      hearing:hearing.value,
-      daySleep:daySleep.value
-    },{merge:true});
-  alert("Saved");
-}
-
-function logout(){ auth.signOut(); }
-
-/* ---------- SCORES ---------- */
-async function loadScores(userId){
-  const snap = await db.collection("users").doc(userId).collection("sadhana").get();
-  const data={}; snap.forEach(d=>data[d.id]=d.data());
-  const weeks = groupByWeek(data);
-
-  renderMonthly(weeks);
-  renderCurrentWeek(weeks.current);
-  renderPreviousWeeks(weeks.previous);
-}
-
-function renderMonthly(weeks){
-  monthlySummary.innerHTML="";
-  Object.keys(weeks.previous).forEach(w=>{
-    monthlySummary.innerHTML+=`<div>${w}</div>`;
-  });
-}
-
-function renderCurrentWeek(data){
-  currentWeek.innerHTML=renderWeek(data);
-}
-
-function renderPreviousWeeks(weeks){
-  previousWeeks.innerHTML="";
-  Object.keys(weeks).forEach(k=>{
-    const d=document.createElement("div");
-    d.className="week-box";
-    d.innerText=k;
-    d.onclick=()=>d.innerHTML="<b>"+k+"</b>"+renderWeek(weeks[k]);
-    previousWeeks.appendChild(d);
-  });
-}
-
-function renderWeek(rows){
-  let h="<table><tr><th>Date</th><th>Sleep</th><th>Wake</th><th>Chant</th><th>Read</th><th>Hear</th><th>DaySleep</th></tr>";
-  rows.forEach(r=>{
-    h+=`<tr>
-      <td>${r.date}</td>
-      <td>${r.sleepTime||"NR"}</td>
-      <td>${r.wakeTime||"NR"}</td>
-      <td>${r.chantingTime||"NR"}</td>
-      <td>${r.reading||"NR"}</td>
-      <td>${r.hearing||"NR"}</td>
-      <td>${r.daySleep||"NR"}</td>
-    </tr>`;
-  });
-  return h+"</table>";
-}
-
-function groupByWeek(data){
-  const now=new Date();
-  const s=new Date(now); s.setDate(now.getDate()-now.getDay());
-  const e=new Date(s); e.setDate(s.getDate()+6);
-  const current=[], previous={};
-  for(const d in data){
-    const dt=new Date(d);
-    if(dt>=s && dt<=e) current.push({date:d,...data[d]});
-    else {
-      const k=weekRange(dt);
-      previous[k]=previous[k]||[];
-      previous[k].push({date:d,...data[d]});
+  function setupDates() {
+    dateSelect.innerHTML = "";
+    const t = new Date();
+    for (let i = 0; i <= 2; i++) {
+      const d = new Date(t);
+      d.setDate(t.getDate() - i);
+      const v = d.toISOString().slice(0,10);
+      const o = document.createElement("option");
+      o.value = v; o.text = v;
+      dateSelect.appendChild(o);
     }
   }
-  return {current, previous};
-}
-function weekRange(d){
-  const s=new Date(d); s.setDate(d.getDate()-d.getDay());
-  const e=new Date(s); e.setDate(s.getDate()+6);
-  return s.toISOString().slice(0,10)+" → "+e.toISOString().slice(0,10);
-}
 
-/* ---------- ADMIN ---------- */
-async function loadAdmin(){
-  const snap=await db.collection("users").get();
-  userSelect.innerHTML="";
-  snap.forEach(u=>{
-    userSelect.innerHTML+=`<option value="${u.id}">${u.data().displayName||u.id}</option>`;
+  auth.onAuthStateChanged(user => {
+    if (!user) return;
+    uid = user.uid;
+    setupDates();
   });
-}
 
-async function loadUserScores(){
-  const id=userSelect.value;
-  adminUserScores.innerHTML="Loading...";
-  const snap=await db.collection("users").doc(id).collection("sadhana").get();
-  const data={}; snap.forEach(d=>data[d.id]=d.data());
-  const weeks=groupByWeek(data);
-  adminUserScores.innerHTML=renderWeek(weeks.current);
-}
+  async function submitSadhana() {
+    const date = dateSelect.value;
+    await db.collection("users").doc(uid)
+      .collection("sadhana").doc(date).set({
+        sleepTime: sleepTime.value,
+        wakeTime: wakeTime.value,
+        chantingTime: chantingTime.value,
+        reading: reading.value,
+        hearing: hearing.value,
+        daySleep: daySleep.value,
+        date
+      }, { merge:true });
+    alert("Saved");
+  }
+
+  function logout() { auth.signOut(); }
+
+  // ---------- SCORES ----------
+  async function loadScores() {
+    const snap = await db.collection("users").doc(uid).collection("sadhana").get();
+    const data = {};
+    snap.forEach(d => data[d.id] = d.data());
+
+    const weeks = groupByWeek(data);
+    renderCurrentWeek(weeks.current);
+    renderPreviousWeeks(weeks.previous);
+  }
+
+  function groupByWeek(data) {
+    const now = new Date();
+    const start = new Date(now);
+    start.setDate(now.getDate() - now.getDay());
+    const end = new Date(start); end.setDate(start.getDate()+6);
+
+    const current = [];
+    const previous = {};
+
+    for (const d in data) {
+      const dt = new Date(d);
+      if (dt >= start && dt <= end) current.push({date:d, ...data[d]});
+      else {
+        const key = weekRange(dt);
+        previous[key] = previous[key] || [];
+        previous[key].push({date:d, ...data[d]});
+      }
+    }
+    return { current, previous };
+  }
+
+  function weekRange(d) {
+    const s = new Date(d); s.setDate(d.getDate()-d.getDay());
+    const e = new Date(s); e.setDate(s.getDate()+6);
+    return s.toISOString().slice(0,10)+" → "+e.toISOString().slice(0,10);
+  }
+
+  function renderCurrentWeek(data) {
+    currentWeek.innerHTML = renderWeekTable(data);
+  }
+
+  function renderPreviousWeeks(weeks) {
+    previousWeeks.innerHTML = "";
+    Object.keys(weeks).forEach(k => {
+      const div = document.createElement("div");
+      div.className="week-header";
+      div.innerText = k;
+      div.onclick = () => {
+        div.innerHTML = "<b>"+k+"</b>"+renderWeekTable(weeks[k]);
+      };
+      previousWeeks.appendChild(div);
+    });
+  }
+
+  function renderWeekTable(rows) {
+    let html = "<table><tr><th>Date</th><th>Sleep</th><th>Wake</th><th>Chant</th><th>Read</th><th>Hear</th><th>DaySleep</th></tr>";
+    rows.forEach(r=>{
+      html+=`<tr>
+        <td>${r.date}</td>
+        <td>${r.sleepTime||"NR"}</td>
+        <td>${r.wakeTime||"NR"}</td>
+        <td>${r.chantingTime||"NR"}</td>
+        <td>${r.reading||"NR"}</td>
+        <td>${r.hearing||"NR"}</td>
+        <td>${r.daySleep||"NR"}</td>
+      </tr>`;
+    });
+    html+="</table>";
+    return html;
+  }
 </script>
+
 </body>
 </html>
